--- a/adminClient/src/body/firstPageManagement/managementBody.fxml
+++ b/adminClient/src/body/firstPageManagement/managementBody.fxml
@@ -3,98 +3,80 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" styleClass="bodyPanes" stylesheets="@../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.ManagementBodyControll">
-   <content>
-      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="1000.0" stylesheets="@../../style/defaultPage.css">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.ManagementBodyController">
+   <children>
+      <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="1000.0" spacing="10.0">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="1000.0" spacing="10.0">
-               <children>
-                  <TextField fx:id="textFieldFilePath" prefHeight="25.0" prefWidth="836.0" promptText="File Path" />
-                  <StackPane prefHeight="150.0" prefWidth="200.0">
-                     <children>
-                        <Button fx:id="loadFileButton" mnemonicParsing="false" onAction="#loadFileButtonClicked" prefHeight="30.0" prefWidth="148.0" styleClass="button-show" text="Load File " />
-                        <Button fx:id="ContinueButton" mnemonicParsing="false" onAction="#continueButtonClicked" prefHeight="25.0" prefWidth="170.0" text="Continue" visible="false" />
-                     </children>
-                  </StackPane>
-               </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </HBox>
-            <HBox prefHeight="495.0" prefWidth="990.0">
-               <children>
-                  <Pane fx:id="paneSimulationsDetails" prefHeight="473.0" prefWidth="750.0" stylesheets="@../../style/defaultPage.css">
-                     <children>
-                        <fx:include source="simulationDetails/Details.fxml" />
-                     </children></Pane>
-                  <Pane fx:id="paneThreadPool" prefHeight="473.0" prefWidth="252.0">
-                     <children>
-                        <VBox alignment="CENTER" layoutX="10.0" layoutY="9.0" prefHeight="433.0" prefWidth="243.0">
-                           <children>
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
-                                 <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Number of threads:" />
-                                    <Spinner fx:id="spinnerThreadsNum" />
-                                 </children>
-                                 <opaqueInsets>
-                                    <Insets left="5.0" />
-                                 </opaqueInsets>
-                                 <padding>
-                                    <Insets left="15.0" right="15.0" />
-                                 </padding>
-                              </HBox>
-                              <Button fx:id="SetThreadsCountButton" mnemonicParsing="false" onAction="#SetThreadsCountButtonClicked" prefHeight="30.0" prefWidth="148.0" styleClass="button-show" text="Set Threads Count" />
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                 <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Simulations queue counter" />
-                                    <Label fx:id="queueCounter" styleClass="text-variable" text="0" />
-                                 </children>
-                                 <opaqueInsets>
-                                    <Insets left="15.0" right="15.0" />
-                                 </opaqueInsets>
-                                 <padding>
-                                    <Insets left="15.0" right="15.0" />
-                                 </padding>
-                              </HBox>
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
-                                 <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Simulations running counter" />
-                                    <Label fx:id="runningCounter" styleClass="text-variable" text="0" />
-                                 </children>
-                                 <padding>
-                                    <Insets left="15.0" right="15.0" />
-                                 </padding>
-                              </HBox>
-                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" styleClass="text-variable">
-                                 <children>
-                                    <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Simulations ended counter" />
-                                    <Label fx:id="endedCounter" text="0" />
-                                 </children>
-                                 <padding>
-                                    <Insets left="15.0" right="15.0" />
-                                 </padding>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children></Pane>
-               </children>
-            </HBox>
+            <TextField fx:id="textFieldFilePath" prefHeight="25.0" prefWidth="836.0" promptText="File Path" />
+            <Button fx:id="loadFileButton" mnemonicParsing="false" onAction="#loadFileButtonClicked" prefHeight="30.0" prefWidth="148.0" styleClass="button-show" text="Load File " />
          </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
          <padding>
-            <Insets left="10.0" />
+            <Insets right="10.0" />
          </padding>
-      </VBox>
-   </content>
-</ScrollPane>
+      </HBox>
+      <HBox prefHeight="515.0" prefWidth="990.0" spacing="5.0">
+         <children>
+            <fx:include source="simulationDetails/Details.fxml" />
+            <VBox alignment="TOP_CENTER" prefHeight="515.0" prefWidth="200.0" styleClass="bodyPanes">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Number of threads:" />
+                        <Spinner fx:id="spinnerThreadsNum" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets left="5.0" />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets left="15.0" right="15.0" />
+                     </padding>
+                  </HBox>
+                  <Button fx:id="setThreadsCountButton" mnemonicParsing="false" onAction="#setThreadsCountButtonClicked" prefHeight="30.0" prefWidth="148.0" styleClass="button-show" text="Set Threads Count" />
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Simulations queue counter" />
+                        <Label fx:id="queueCounter" styleClass="text-variable" text="0" />
+                     </children>
+                     <opaqueInsets>
+                        <Insets left="15.0" right="15.0" />
+                     </opaqueInsets>
+                     <padding>
+                        <Insets left="15.0" right="15.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Simulations running counter" />
+                        <Label fx:id="runningCounter" styleClass="text-variable" text="0" />
+                     </children>
+                     <padding>
+                        <Insets left="15.0" right="15.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" styleClass="text-variable">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" text="Simulations ended counter" />
+                        <Label fx:id="endedCounter" text="0" />
+                     </children>
+                     <padding>
+                        <Insets left="15.0" right="15.0" />
+                     </padding>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </children>
+   <padding>
+      <Insets left="5.0" right="5.0" />
+   </padding>
+</VBox>
