--- a/adminClient/src/body/firstPageManagement/simulationDetails/Details.fxml
+++ b/adminClient/src/body/firstPageManagement/simulationDetails/Details.fxml
@@ -7,17 +7,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="750.0" styleClass="splitPane" stylesheets="@../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.DetailsController">
+<VBox alignment="TOP_CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="735.0" styleClass="splitPane" stylesheets="@../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.DetailsController">
    <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="80.0" prefWidth="980.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="790.0" spacing="10.0">
          <children>
             <ComboBox fx:id="worldCBox" prefWidth="150.0" promptText="Choose world" styleClass="ComboBox" />
-            <Button fx:id="showWorldButton" mnemonicParsing="false" onAction="#showWorldButtonClicked" styleClass="button-show" text="Show" />
+            <Button fx:id="showWorldButton" mnemonicParsing="false" onAction="#showWorldButtonClicked" prefHeight="30.0" prefWidth="72.0" styleClass="button-show" text="Show" />
          </children>
          <VBox.margin>
-            <Insets left="20.0" right="10.0" top="10.0" />
+            <Insets left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </HBox>
-      <Pane fx:id="detailsPane" prefHeight="500.0" prefWidth="1000.0" />
+      <Pane fx:id="detailsPane" prefHeight="445.0" prefWidth="785.0" />
    </children>
 </VBox>
