--- a/adminClient/src/body/firstPageManagement/simulationDetails/worldDetails/rule/RuleDetails.fxml
+++ b/adminClient/src/body/firstPageManagement/simulationDetails/worldDetails/rule/RuleDetails.fxml
@@ -9,25 +9,25 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<HBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="350.0" prefWidth="440.0" styleClass="bodyPanes" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.worldDetails.rule.RuleDetailsController">
+<HBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="490.0" styleClass="bodyPanes" stylesheets="@../../../../../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.worldDetails.rule.RuleDetailsController">
    <children>
-      <VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="203.0">
+      <VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="200.0">
          <children>
-            <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="207.0" spacing="10.0">
+            <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="19.0" spacing="10.0">
                <children>
                   <Label prefHeight="25.0" prefWidth="60.0" styleClass="label-title" text="Name:" />
-                  <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="132.0" />
+                  <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="132.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="218.0" spacing="10.0">
+            <HBox alignment="CENTER_LEFT" minHeight="-Infinity" minWidth="-Infinity" prefHeight="80.0" prefWidth="190.0" spacing="10.0">
                <children>
-                  <Label prefHeight="25.0" prefWidth="82.0" styleClass="label-title" text="Activation:" />
-                  <Text fx:id="activationVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-variable" wrappingWidth="124.0" />
+                  <Label prefHeight="25.0" prefWidth="83.0" styleClass="label-title" text="Activation:" />
+                  <Text fx:id="activationVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="104.0" />
                </children>
             </HBox>
             <ScrollPane fitToHeight="true" fitToWidth="true">
                <content>
-                  <TreeView fx:id="actionsTreeView" minHeight="-Infinity" minWidth="-Infinity" prefHeight="202.0" prefWidth="201.0" />
+                  <TreeView fx:id="actionsTreeView" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="190.0" />
                </content>
             </ScrollPane>
             <Button fx:id="selectActionButton" mnemonicParsing="false" onAction="#SelectActionClicked" prefHeight="30.0" prefWidth="100.0" styleClass="button-show" text="Select">
@@ -37,7 +37,7 @@
             </Button>
          </children>
       </VBox>
-      <VBox fx:id="actionVBox" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="226.0" />
+      <VBox fx:id="actionVBox" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="270.0" />
    </children>
    <padding>
       <Insets left="10.0" right="10.0" />
