--- a/adminClient/src/body/firstPageManagement/simulationDetails/worldDetails/rule/actions/increase/Increase.fxml
+++ b/adminClient/src/body/firstPageManagement/simulationDetails/worldDetails/rule/actions/increase/Increase.fxml
@@ -6,55 +6,55 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="226.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.worldDetails.rule.actions.increase.IncreaseController">
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="290.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.worldDetails.rule.actions.increase.IncreaseController">
    <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="65.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Name:" />
             <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="166.0" />
          </children>
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Main Entity Name:" />
             <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="108.0" />
          </children>
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Secondary Entity Name:" />
             <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="81.0" />
          </children>
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Property:" />
             <Text fx:id="propertyVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="152.0" />
          </children>
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="87.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="By:" />
             <Text fx:id="byVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="179.0" />
          </children>
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
    </children>
    <padding>
-      <Insets right="5.0" />
+      <Insets left="20.0" right="10.0" />
    </padding>
 </VBox>
