--- a/adminClient/src/body/firstPageManagement/simulationDetails/worldDetails/rule/actions/kill/Kill.fxml
+++ b/adminClient/src/body/firstPageManagement/simulationDetails/worldDetails/rule/actions/kill/Kill.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="328.0" prefWidth="226.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.worldDetails.rule.actions.kill.KillController">
+<VBox fx:id="vBox" minHeight="-Infinity" minWidth="-Infinity" prefHeight="435.0" prefWidth="270.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="body.firstPageManagement.simulationDetails.worldDetails.rule.actions.kill.KillController">
    <children>
-      <HBox alignment="CENTER_LEFT" prefHeight="105.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Name:" />
             <Text fx:id="nameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="165.0" />
@@ -17,7 +17,7 @@
             <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="105.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Main Entity Name:" />
             <Text fx:id="mainEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="113.0" />
@@ -26,7 +26,7 @@
             <Insets />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="105.0" prefWidth="226.0" spacing="10.0">
+      <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="250.0" spacing="10.0">
          <children>
             <Label styleClass="action-text-variable" text="Secondary Entity Name:" />
             <Text fx:id="secondaryEntityNameVariableText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="action-text-variable" wrappingWidth="86.0" />
@@ -36,4 +36,7 @@
          </VBox.margin>
       </HBox>
    </children>
+   <padding>
+      <Insets left="10.0" right="10.0" />
+   </padding>
 </VBox>
