--- a/adminClient/src/mainPage/mainPage.fxml
+++ b/adminClient/src/mainPage/mainPage.fxml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1000.0" stylesheets="@../style/defaultPage.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainPage.MainPageController">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints maxHeight="318.0" minHeight="10.0" prefHeight="121.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="566.0" minHeight="10.0" prefHeight="529.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <children>
-      <fx:include fx:id="header" source="../header/header.fxml" />
-      <AnchorPane fx:id="body" prefHeight="550.0" prefWidth="1000.0" GridPane.rowIndex="1" />
-   </children>
-</GridPane>
+
+<ScrollPane fitToHeight="true" fitToWidth="true" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainPage.MainPageController">
+   <content>
+      <GridPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="710.0" prefWidth="1010.0" stylesheets="@../style/defaultPage.css">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="1010.0" minWidth="1010.0" prefWidth="1010.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="100.0" minHeight="100.0" prefHeight="100.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="610.0" minHeight="610.0" prefHeight="610.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <fx:include fx:id="header" source="../header/header.fxml" />
+            <AnchorPane fx:id="body" prefHeight="600.0" prefWidth="1000.0" styleClass="bodyPanes" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
+   </content>
+</ScrollPane>
