--- a/adminClient/src/mainPage/mainPage.fxml
+++ b/adminClient/src/mainPage/mainPage.fxml
@@ -18,7 +18,7 @@
           <RowConstraints maxHeight="610.0" minHeight="610.0" prefHeight="610.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <fx:include fx:id="header" source="../header/header.fxml" />
+            <fx:include fx:id="header" source="../adminHeader/header.fxml" />
             <AnchorPane fx:id="body" prefHeight="600.0" prefWidth="1000.0" styleClass="bodyPanes" GridPane.rowIndex="1" />
          </children>
       </GridPane>
